--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-mod_name = ExampleMod
-mod_id = examplemod
-mod_version = 1.0.0
+mod_name = BWStats
+mod_id = bwstats
+mod_version = 0.1.0
 
 essential.defaults.loom=0
 
